--- a/style/style.css
+++ b/style/style.css
@@ -14,9 +14,9 @@ h5{
     line-height: 24px;
 }
 p{
-    font-size: 16px;
+    font-size: 12px;
     font-weight: 400px;
-    line-height: 26px;
+    line-height: 19px;
 }
 .quick{
     color: #727272;
@@ -31,11 +31,11 @@ p{
     justify-content: space-between;
 }
 header, .banner-container {
-    padding: 32px 220px;
+    padding: 32px 140px;
     background-color: antiquewhite;
 }
 section, footer{
-    padding: 32px 240px;
+    padding: 32px 160px;
 }
 nav.nav-bar ul {
     display: flex;
@@ -67,7 +67,7 @@ li {
     padding-bottom: 30px;
 }
 .banner-content p {
-    padding: 0 150px 50px 10px;
+    padding: 0 114px 50px 10px;
 }
 .btn-primary {
     text-decoration: none;
@@ -89,12 +89,12 @@ li {
     justify-content: space-evenly;
     align-items: center;
     padding: 85px 0;
-    column-gap: 40px;
+    column-gap: 34px;
 }
 .image-box {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 24px;
+    gap: 10px;
 }
 .image-box img {
     width: 92%;
@@ -104,8 +104,8 @@ li {
     width: 50%;
 }
 .feature-content-container h2 {
-    font-size: 45px;
-    line-height: 52px;
+    font-size: 40px;
+    line-height: 44px;
     padding: 10px 0;
 }
 .banner-content p {
@@ -115,22 +115,22 @@ li {
 .technical-container{
     display: flex;
     justify-content: center;
-    column-gap: 40px;
+    column-gap: 20px;
 }
 .technical-content-container {
-    width: 44%;
+    width: 46%;
     height: 100%;
 }
 .technical-image-container{
-    width: 56%;
+    width: 54%;
 }
 .technical-image-container img {
     width: 100%;
     height: 100%;
 }
 .technical-content-container h2 {
-    font-size: 45px;
-    line-height: 53px;
+    font-size: 40px;
+    line-height: 44px;
     padding: 0 21px;
     border-left: 5px solid #FF900E;
 }
@@ -141,7 +141,7 @@ li {
     padding: 20px;
 }
 .technical-inner-content {
-    padding: 10px 10px;
+    padding: 10px 14px;
     background: #0000000a;
     margin: 5px 0;
 }
@@ -152,12 +152,12 @@ li {
 .btn-experience {
     text-align: center;
     text-decoration: none;
-    padding: 45px;
+    padding: 22px;
     background-color: #FF900E;
     color: #fff;
     border-radius: 10px;
     position: relative;
-    top: -110px;
+    top: -73px;
 }
 .btn-experience h1 {
     font-size: 36px;
@@ -204,7 +204,11 @@ li {
     display: flex;
     justify-content: space-evenly;
     padding: 50px 0;
+    column-gap: 20px;
 
+}
+.feature-content-container p {
+    padding-bottom: 40px;
 }
 
 /*Sponsor-Section*/
