--- a/style/style.css
+++ b/style/style.css
@@ -59,7 +59,7 @@ li {
 }
 .banner-content {
     text-align: center;
-    padding: 50px 0;
+    padding: 0 0 50px;
 }
 .banner-content h2 {
     font-size: 64px;
